--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <button type="submit" class="btn btn-primary mb-3 ms-2"><i class="fi fi-rr-search"></i></button>
                   </div>
             </div>
-            <div class="pt-5 ms-5">
+            <div class="img_hero pt-5 ms-5">
                 <img src="banner-image-1.svg" alt="" style="width: 550px;">
             </div>
 
@@ -100,7 +100,7 @@
                 <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="card_container">
-                        <article class="card_article shadow-rounded">
+                        <article class="card_article">
                         <img src="ed00654244575aeea5af713241b1f057-scaled.webp" alt="" class="card_img">
                 
                         <div class="card_data">
